Adding get user lang and name API.

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
 <!-- App Models -->
 <script src="app/models/channel.js"></script>
-<script src="app/models/language.js"></script>
+<script src="app/models/user.js"></script>
 
 <!-- App Controllers -->
 <script src="app/controllers/shared/siteController.js"></script>
